fixed authentication system

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>DedSec Chat</title>
   </head>
   <body>
     <div id="root"></div>
